--- a/public/css/index.css
+++ b/public/css/index.css
@@ -146,15 +146,17 @@
       border-radius: 50px;
       padding: 30px 90px;
       height: 50px;
-      font-weight: 500;
+      font-weight: 600;
       margin-top: 50px;
       border: none;
       text-transform: uppercase;
+      font-size: 22px;
   }
 
   section.hero_section_funkos_header button:hover {
       background-color: var(--buttonHeroText);
-      color: var(--buttonHeroBg)
+      color: var(--buttonHeroBg);
+      cursor: pointer;
   }
 
 
