--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,9 +6,11 @@
         <article>
             <h3>Nuevos Ingresos</h3>
             <p>Descubrí el próximo Funko Pop de tu colección</p>
-            <button>
-                <a href="./shop">Shop</a>
-            </button>
+            <a href="/shop" class>
+                <button>
+                    Shop
+                </button>
+            </a>
         </article>
     </section>
 
