--- a/src/views/pages/item.ejs
+++ b/src/views/pages/item.ejs
@@ -8,10 +8,12 @@
     <main class="container">
         <section class="item-section">
             <div class="item-picture">
-                <picture>
-                    <img src="<%= item[0].img_front %>"
-                        alt=<%= item[0].product_name %>
-                </picture>
+                <div class="image-container"
+                    style="background-image: url('<%= item[0].img_front %>')">
+                </div>
+                <div class="image-back"
+                    style="background-image: url('<%= item[0].img_back %>')">
+                </div>
             </div>
             <article class="item-article">
                 <h4>
@@ -45,81 +47,9 @@
 
             </article>
         </section>
-        <section class="ultimos_lanzamientos">
+        <section class="productos_relacionados">
             <h2>PRODUCTOS RELACIONADOS</h2>
-            <div class="glide">
-                <div class="glide__track" data-glide-el="track">
-                    <ul class="glide__slides">
-                        <li class="glide__slides">
-                            <article>
-                                <a href="/shop/item/4">
-                                    <picture>
-                                        <img src="/images/star-wars/trooper-1.webp"
-                                            alt="Figura coleccionable de Funko de Stormtrooper">
-                                        <span class="span_nuevo">Nuevo</span>
-                                    </picture>
-
-                                    <div class="ultimos_lanzamientos_text">
-                                        <p>STAR WARS</p>
-                                        <h4>STORMTROOPER LIGHTSABER</h4>
-                                        <p>$ 1799,99</p>
-                                        <p class="cuotas_sin_interes">3 CUOTAS
-                                            SIN
-                                            INTERÉS</p>
-                                    </div>
-                                </a>
-                                <!-- <a href="javascript:void(0)">
-                                        <img class="flecha flecha_izquierda"
-                                            src="/images/icons/Left Vector 1 (Stroke).png">
-                                    </a> -->
-                            </article>
-                        </li>
-                        <li class="glide__slides">
-                            <article>
-                                <a href="/shop/item/7">
-                                    <picture>
-                                        <img src="/images/pokemon/pidgeotto-1.webp"
-                                            alt="Figura coleccionable de Funko de Pidgeotto">
-                                        <span class="span_nuevo">Nuevo</span>
-                                    </picture>
-                                    <div class="ultimos_lanzamientos_text">
-                                        <p>POKEMON</p>
-                                        <h4>PIDGEOTTO</h4>
-                                        <p>$ 1799,99</p>
-                                        <p class="cuotas_sin_interes">3 CUOTAS
-                                            SIN
-                                            INTERÉS</p>
-                                    </div>
-                                </a>
-                            </article>
-                        </li>
-                        <li class="glide__slides">
-                            <article>
-                                <a href="/shop/item/12">
-                                    <picture>
-                                        <img src="/images/harry-potter/luna-1.webp"
-                                            alt="Figura coleccionable de Funko de Luna Lovegood">
-                                        <span class="span_nuevo">Nuevo</span>
-                                    </picture>
-                                    <div class="ultimos_lanzamientos_text">
-                                        <p>HARRY POTTER</p>
-                                        <h4>LUNA LOVEGOOD LION MASK</h4>
-                                        <p>$ 1799,99</p>
-                                        <p class="cuotas_sin_interes">3 CUOTAS
-                                            SIN
-                                            INTERÉS</p>
-                                    </div>
-                </div>
-                </a>
-                <!-- <a href="javascript:void(0)">
-                                        <img class="flecha flecha_derecha"
-                                            src="/images/icons/Right Vector 1 (Stroke).png">
-                                    </a> -->
-                </article>
-                </li>
-                </ul>
-            </div>
-            </div>
+            <%- include("../partials/carrousel.ejs") %>
         </section>
     </main>
 
