--- a/public/css/item.css
+++ b/public/css/item.css
@@ -15,7 +15,41 @@
 }
 
 div.item-picture img {
-    height: 450px;
+    display: block;
+    transition: transform 0.3s ease-in-out;
+    /* height: 450px; */
+}
+
+.item-picture {
+    position: relative;
+    overflow: hidden;
+    width: 600px;
+    height: 400px;
+}
+
+.image-container,
+.image-back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.image-back {
+    opacity: 0;
+}
+
+.item-picture:hover .image-container {
+    opacity: 0;
+}
+
+.item-picture:hover .image-back {
+    opacity: 1;
 }
 
 .item-article h4 {
@@ -116,5 +150,12 @@ span.item-precio {
     border: none;
     padding: 10px 12px;
     margin-left: 20px;
+}
 
+
+/* RESUMEN */
+
+
+.total {
+    border-top: 3px solid #F33;
 }
