--- a/src/views/pages/cart.ejs
+++ b/src/views/pages/cart.ejs
@@ -30,7 +30,8 @@
                                 <h3>BABY YODA BLUEBALL</h3>
                                 <p>STAR WARS
                                 </p>
-                                <span class="item-precio">Precio unitario: $
+                                <span class="item-precio-unitario">Precio
+                                    unitario: $
                                     1799,99</span>
 
                             </article>
@@ -65,7 +66,8 @@
                                 <h3>PIDGEOTTO</h3>
                                 <p>POKEMON
                                 </p>
-                                <span class="item-precio">Precio unitario: $
+                                <span class="item-precio-unitario">Precio
+                                    unitario: $
                                     1799,99</span>
 
                             </article>
@@ -90,6 +92,31 @@
                 </tr>
             </tbody>
         </table>
+        <section class="aside">
+            <aside class="resumen">
+                <h2>RESUMEN</h2>
+                <div class="resumen-total">
+                    <div>
+                        <h4>CANTIDAD DE ELEMENTOS</h4>
+                        <p>3</p>
+                    </div>
+                    <div>
+                        <h4>SUBTOTAL</h4>
+                        <p>$ 5.399,97</p>
+                    </div>
+                    <div>
+                        <h4>ENVÍO</h4>
+                        <p>0,00</p>
+                    </div>
+
+                    <div class="total">
+                        <h3>TOTAL</h3>
+                        <p>$ 5.399,97</p>
+                    </div>
+
+                </div>
+            </aside>
+        </section>
     </main>
 
     <!-- FOOTER -->
