--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -6,7 +6,7 @@
                     <a href="/shop">Shop</a>
                 </li>
                 <li>
-                    <a href="/login">Login</a>
+                    <a href="/auth/login">Login</a>
                 </li>
                 <li>
                     <a href="/contact">Contacto</a>
