[FEAT] Loader Changes + Add to Cart

--- a/src/views/pages/item.ejs
+++ b/src/views/pages/item.ejs
@@ -38,8 +38,10 @@
                         <button id="subtract" class="item_substract"
                             type="button">-</button>
                     </div>
-                    <button class="item-button-agregar_al_carrito">Agregar al
-                        carrito</button>
+                    <a href="/shop/cart" class="item-button-agregar_al_carrito">
+                        Agregar al carrito
+                    </a>
+
                 </form>
                 <p class="item-metodos_de_pago"><u>Ver métodos de pago</u> - 3
                     CUOTAS SIN INTERÉS</p>
