--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Funkoshop</title>
-
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/cart.css">
     <link rel="stylesheet" href="/css/item.css">
     <link rel="stylesheet" href="/css/shop.css">
     <link rel="stylesheet" href="/css/login.css">
-
+    <link rel="stylesheet" href="/css/contact.css">
     <link rel="stylesheet"
         href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
     <link rel="stylesheet"
