--- a/src/views/pages/contact.ejs
+++ b/src/views/pages/contact.ejs
@@ -6,7 +6,7 @@
     <%- include("../partials/header.ejs") %><!-- HERO -->
 
     <!-- MAIN -->
-    <main class="container">
+    <main class="container-section">
 
         <section class="contact-section">
             <p>¡Estamos para ayudarte! Contáctanos para cualquier pregunta
